# python-project-52

./: .codeclimate.yml  .gitignore  Makefile  README.md  build.sh  coverage.xml  env_example  pyproject.toml
.github/workflows/: pyci.yml  pyci_1.yml  pyci_2
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: index.html  login.html  registration.html  user_update.html  users.html
task_manager/templates/auth/: label_confirm_delete.html  status_confirm_delete.html  task_confirm_delete.html  user_confirm_delete.html
task_manager/templates/labels/: create.html  labels.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  task.html  tasks.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
